# k8s-scaler

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yaml
charts/general-scaler/: Chart.yaml
charts/general-scaler/templates/: crd-generalscaler.yaml  deployment-controller.yaml  rbac.yaml  serviceaccount.yaml
examples/business-metric/: deployment.yaml  generalscaler.yaml
examples/fake-prometheus/: fake-prometheus-deployment.yaml  generalscaler.yaml
examples/http-latency/: deployment.yaml  generalscaler.yaml
examples/worker-redis-queue/: deployment.yaml  generalscaler.yaml
generalscaler/: controller.py  main.py  safety.py  scaling_logic.py
generalscaler/metrics/: __init__.py  base.py  prometheus.py  pubsub_plugin.py  redis_plugin.py
generalscaler/policies/: __init__.py  base.py  cost.py  slo.py
tests/: conftest.py
tests/e2e/: conftest.py  test_business_metric.py  test_http_latency.py  test_worker_redis_queue.py
tests/unit/: test_prometheus_mock.py  test_redis_mock.py  test_safety.py  test_slo_policy.py
